--- a/server.properties
+++ b/server.properties
@@ -1,10 +1,10 @@
 #Minecraft server properties
-#Wed Mar 05 22:03:19 UTC 2025
+#Wed Mar 05 22:34:54 UTC 2025
 allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
-difficulty=easy
+difficulty=hard
 enable-command-block=false
 enable-jmx-monitoring=false
 enable-query=false
@@ -29,9 +29,9 @@ max-chained-neighbor-updates=1000000
 max-players=20
 max-tick-time=60000
 max-world-size=29999984
-motd=A Minecraft Server
+motd=Servidor da CGC
 network-compression-threshold=256
-online-mode=true
+online-mode=false
 op-permission-level=4
 player-idle-timeout=0
 prevent-proxy-connections=false
@@ -44,7 +44,7 @@ require-resource-pack=false
 resource-pack=
 resource-pack-prompt=
 resource-pack-sha1=
-server-ip=
+server-ip=0.0.0.0
 server-port=25565
 simulation-distance=10
 spawn-animals=true
