--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Wed Mar 05 22:34:54 UTC 2025
+#Thu Mar 06 00:05:31 UTC 2025
 allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
@@ -44,7 +44,7 @@ require-resource-pack=false
 resource-pack=
 resource-pack-prompt=
 resource-pack-sha1=
-server-ip=144.22.254.7
+server-ip=
 server-port=25565
 simulation-distance=10
 spawn-animals=true
